--- a/index.html
+++ b/index.html
@@ -1102,7 +1102,7 @@ body {
                           <div class="content">
                             <p class="clear-margin relative">
 
-                              <strong>Master Degree, Bachelor Degree</strong>,&nbsp;
+                              <strong>Computer Engineering, Master Degree</strong>,&nbsp;
                               Faculty of Science Tetouan
                             </p>
                             <p class="text-muted">
