--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,7 @@ body {
                           <div class="content">
                             <p class="clear-margin relative">
 
-                              <strong>Computer Engineering, Advanced Technician&#x27;s Certificate</strong>,&nbsp;
+                              <strong>Computer Engineering, Associate's Degree</strong>,&nbsp;
                               Mohammed V high school Essaouira
                             </p>
                             <p class="text-muted">
