--- a/index.html
+++ b/index.html
@@ -699,12 +699,13 @@ body {
               <span class="profile-pic-container">
                 <div class="profile-pic">
                   <img class="media-object img-circle center-block"  data-src="holder.js/100x100"
-                    alt="Abdenasser El Idrissi" src="//www.gravatar.com/avatar/cafbb2fa9ec5405476874654c3eca1bb?s=100&amp;r=pg&amp;d=mm" itemprop="image">
+                    alt="Abdenasser El Idrissi" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAh3AAAAJDQyNGI2NWQ5LTU4ZmEtNDVkYi1iYTExLTRkZWY5OWU3ODY1YQ.jpg" itemprop="image">
                 </div>
 
                 <div class="name-and-profession">
-                  <h3 class="text-center text-bolder name" itemprop="name"> Abdenasser El Idrissi</h3>
-                  <h5 class="text-muted text-center" itemprop="jobTitle">Full-stack developer</h5>
+                  <h3 class="text-center text-bolder name" itemprop="name"> Abdenasser El Idrissi (Nasser)</h3>
+                  <h5 class="text-muted text-center" itemprop="jobTitle">Full-stack web/mobile developer</h5>
+                  <strong>Always eager to learn and discover new lands!</strong>
                 </div>
               </span>
               <hr>
@@ -777,28 +778,29 @@ body {
                       <li class="card card-nested clearfix">
                         <div class="content">
                           <p class="clear-margin relative">
-                              <i class="fa fa-circle current-event"
-                                 rel="tooltip" title="Currently Working" data-placement="left"></i>
-                            <strong>Full-stack developer</strong>,&nbsp;
+                            <strong>Full-stack web/mobile developer</strong>,&nbsp;
                               <a href="https://qraft.nl/"  target="_blank">Qraft</a>
                           </p>
                           <p class="text-muted">
                             <small>
                               <span class="space-right">
                                 Feb, 2016 -
-                                  Present
+                                  Feb, 2017
                               </span>
 
                                 <span>
                                   <i class="fa fa-clock-o icon-left"></i>
-                                  10 months
+                                  1 year
                                 </span>
                             </small>
                           </p>
-                          <p>Qraft is a web/mobile development agency from Netherlands that focuses on providing high quality services for clients worldwide.</p>
+                          <p>Qraft is a web/mobile development agency from Netherlands that focuses on providing high quality services for clients worldwide.. Qraft employers are a group of web and mobile developers working remotely from different countries around the world, building awesome web and mobile apps using Javascript technologies like EmberJS ReactJS React Native and in parallel we are trying to move from using Ruby On Rails as our backend stack to Elixir/Phoenix and we're doing very well about it .. we like solving and working on challenging problems and we are always eager to find the best optimised solutions.</p>
+                          <strong>My mission inside Qraft consist of doing the following tasks :<strong>
                             <ul>
                                 <li> Ruby On Rails full-stack development. </li>
+                                <li> Elixir/Phoenix backend development. </li>
                                 <li> EmberJS front-end development. </li>
+                                <li> FuseJS Mobile apps development. </li>
                                 <li> Reporting and following up with clients. </li>
                             </ul>
                         </div>
@@ -806,7 +808,7 @@ body {
                       <li class="card card-nested clearfix">
                         <div class="content">
                           <p class="clear-margin relative">
-                            <strong>Full-stack developer</strong>,&nbsp;
+                            <strong>Full-stack ruby on rails developer</strong>,&nbsp;
                               <a href="https://umbreo.com/"  target="_blank">Umbreo</a>
                           </p>
                           <p class="text-muted">
@@ -818,15 +820,19 @@ body {
 
                                 <span>
                                   <i class="fa fa-clock-o icon-left"></i>
-                                  11 months
+                                  1 year
                                 </span>
                             </small>
                           </p>
-                          <p>Umbreo is a company located in Tetouan shore (Tétouan) that provides a cloud platform that gives companies the power to easily build enterprise class it-infrastructure within minutes.</p>
+                          <p>Umbreo is a cloud-based platform that gives companies, developers & startups the power to easily and quickly build world-class IT infrastructure.</p>
+                          <p>We go beyond traditional configuration management tools by providing configuration management as a service.</p>
+                          <p>We achieve this by combining best-of-breed technologies that give system administrators and developers the ultimate control, insight and automation possibilities necessary to build an agile, scalable and secure IT infrastructure quickly and easily.</p>
+                          <strong>My mission inside Umbreo consist of doing the following tasks :<strong>  
                             <ul>
-                                <li> Full-stack development of a travel engine web application. </li>
+                                <li> Ruby/Rails Full-stack development. </li>
                                 <li> Developing &amp; automating tests. </li>
                                 <li> Automating servers configuration. </li>
+                                <li> Developing build, deployment, maintenance scripts and related tasks using Docker</li>
                             </ul>
                         </div>
                       </li>
@@ -878,7 +884,7 @@ body {
                                 </span>
                             </small>
                           </p>
-                          <p>Development and implementation of a web application for managing file tracking and authorization requests within the planning service of the urban municipality of Tetouan</p>
+                          <p>Development and implementation of a PHP/MySQL web application for managing file tracking and authorization requests within the planning service of the urban municipality of Tetouan</p>
                             <ul>
                                 <li> Global Study of the Project. </li>
                                 <li> Study of the management and monitoring process. </li>
@@ -906,7 +912,7 @@ body {
                                 </span>
                             </small>
                           </p>
-                          <p>creation of a dynamic website with a reservation system for a hotel.</p>
+                          <p>creation of a dynamic PHP/MySQL web app with a reservation system for a hotel.</p>
                             <ul>
                                 <li> Global Study of the Project. </li>
                                 <li> Study of the management process of rooms reservation. </li>
@@ -937,17 +943,17 @@ body {
                                 </div>
                               </div>
                             <div class="skill-info">
-                              <strong>Web Development</strong>
+                              <strong>Web Apps Development</strong>
 
                               <div class="space-top labels">
                                   <span class="label label-keyword">Ruby</span>
                                   <span class="label label-keyword">Ruby on Rails</span>
-                                  <span class="label label-keyword">Javascript</span>
+                                  <span class="label label-keyword">Elixir/Phoenix</span>
+                                  <span class="label label-keyword">Javascript (ES5/ES6)</span>
                                   <span class="label label-keyword">EmberJS</span>
                                   <span class="label label-keyword">NodeJS</span>
                                   <span class="label label-keyword">Express</span>
                                   <span class="label label-keyword">ReactJS</span>
-                                  <span class="label label-keyword">RethinkDB</span>
                                   <span class="label label-keyword">Twitter Bootstrap</span>
                                   <span class="label label-keyword">Semantic UI</span>
                                   <span class="label label-keyword">PHP</span>
@@ -956,6 +962,21 @@ body {
                                   <span class="label label-keyword">Ajax</span>
                                   <span class="label label-keyword">HTML</span>
                                   <span class="label label-keyword">CSS</span>
+                              </div>
+                            </div>
+                          </li>
+                          <li class="card card-nested card-skills">
+                              <div class="skill-level" rel="tooltip" title="Master" data-placement="left">
+                                <div class="skill-progress master">
+                                </div>
+                              </div>
+                            <div class="skill-info">
+                              <strong>Mobile Apps Development</strong>
+
+                              <div class="space-top labels">
+                                  <span class="label label-keyword">FuseJS</span>
+                                  <span class="label label-keyword">Ionic3 (angular4/TypeScript)</span>
+                                  <span class="label label-keyword">React Native</span>
                               </div>
                             </div>
                           </li>
@@ -997,10 +1018,11 @@ body {
                               <strong>Databases</strong>
 
                               <div class="space-top labels">
-                                  <span class="label label-keyword">MySQL</span>
                                   <span class="label label-keyword">PostgreSQL</span>
+                                  <span class="label label-keyword">MySQL</span>
                                   <span class="label label-keyword">SQLite</span>
-                                  <span class="label label-keyword">Oracle</span>
+                                  <span class="label label-keyword">RethinkDB</span>
+                                  <span class="label label-keyword">MongoDB</span>
                               </div>
                             </div>
                           </li>
@@ -1027,10 +1049,10 @@ body {
                               <strong>Electronics and Automation</strong>
 
                               <div class="space-top labels">
+                                  <span class="label label-keyword">Arduino</span>
                                   <span class="label label-keyword">Siemens S7-300 PLC</span>
                                   <span class="label label-keyword">Simatic Manager</span>
                                   <span class="label label-keyword">SIMATIC WinCC</span>
-                                  <span class="label label-keyword">Arduino</span>
                               </div>
                             </div>
                           </li>
@@ -1043,41 +1065,9 @@ body {
                               <strong>Operating Systems</strong>
 
                               <div class="space-top labels">
+                                  <span class="label label-keyword">MacOS</span>
                                   <span class="label label-keyword">Linux</span>
                                   <span class="label label-keyword">Windows</span>
-                              </div>
-                            </div>
-                          </li>
-                          <li class="card card-nested card-skills">
-                              <div class="skill-level" rel="tooltip" title="Master" data-placement="left">
-                                <div class="skill-progress master">
-                                </div>
-                              </div>
-                            <div class="skill-info">
-                              <strong>Other Languages</strong>
-
-                              <div class="space-top labels">
-                                  <span class="label label-keyword">C</span>
-                                  <span class="label label-keyword">VB Script</span>
-                                  <span class="label label-keyword">C++</span>
-                                  <span class="label label-keyword">Java</span>
-                              </div>
-                            </div>
-                          </li>
-                          <li class="card card-nested card-skills">
-                              <div class="skill-level" rel="tooltip" title="Master" data-placement="left">
-                                <div class="skill-progress master">
-                                </div>
-                              </div>
-                            <div class="skill-info">
-                              <strong>Misc</strong>
-
-                              <div class="space-top labels">
-                                  <span class="label label-keyword">Monitoring and project management</span>
-                                  <span class="label label-keyword">Engineering management</span>
-                                  <span class="label label-keyword">Team management</span>
-                                  <span class="label label-keyword">Planning</span>
-                                  <span class="label label-keyword">Coaching</span>
                               </div>
                             </div>
                           </li>
