--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@ body {
                 <div class="name-and-profession">
                   <h3 class="text-center text-bolder name" itemprop="name"> Abdenasser El Idrissi (Nasser)</h3>
                   <h5 class="text-muted text-center" itemprop="jobTitle">Full-stack web/mobile developer</h5>
-                  <strong class="text-muted text-center">Always eager to learn and discover new lands!</strong>
+                  <h5 class="text-muted text-center">Always eager to learn and discover new lands!</h5>
                 </div>
               </span>
               <hr>
