--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@ body {
                                 </span>
                             </small>
                           </p>
-                          <p>Qraft is a web/mobile development agency from Netherlands that focuses on providing high quality services for clients worldwide.. Qraft employers are a group of web and mobile developers working remotely from different countries around the world, building awesome web and mobile apps using Javascript technologies like EmberJS ReactJS React Native and in parallel we are trying to move from using Ruby On Rails as our backend stack to Elixir/Phoenix and we're doing very well about it .. we like solving and working on challenging problems and we are always eager to find the best optimised solutions.</p>
+                          <p>Qraft is a web/mobile development agency from Netherlands that focuses on providing high quality services for clients worldwide.</p><p>Qraft employers are a group of web and mobile developers working remotely from different countries around the world, building awesome web and mobile apps using Javascript technologies like EmberJS ReactJS React Native and in parallel we are trying to move from using Ruby On Rails as our backend stack to Elixir/Phoenix and we're doing very well about it.</p><p>we like solving and working on challenging problems and we are always eager to find the best optimised solutions.</p>
                           <strong>My mission inside Qraft consist of doing the following tasks :<strong>
                             <ul>
                                 <li> Ruby On Rails full-stack development. </li>
