--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@ body {
                           <p>Umbreo is a cloud-based platform that gives companies, developers & startups the power to easily and quickly build world-class IT infrastructure.</p>
                           <p>We go beyond traditional configuration management tools by providing configuration management as a service.</p>
                           <p>We achieve this by combining best-of-breed technologies that give system administrators and developers the ultimate control, insight and automation possibilities necessary to build an agile, scalable and secure IT infrastructure quickly and easily.</p>
-                          <strong>My mission inside Umbreo consist of doing the following tasks :<strong>  
+                          <strong>My mission inside Umbreo consist of doing the following tasks :</strong>  
                             <ul>
                                 <li> Ruby/Rails Full-stack development. </li>
                                 <li> Developing &amp; automating tests. </li>
