--- a/index.html
+++ b/index.html
@@ -778,6 +778,35 @@ body {
                       <li class="card card-nested clearfix">
                         <div class="content">
                           <p class="clear-margin relative">
+                            <strong>Mobile Apps Developer</strong>,&nbsp;
+                              <a href=""  target="_blank">Qubately</a>
+                          </p>
+                          <p class="text-muted">
+                            <small>
+                              <span class="space-right">
+                                Feb, 2017 -
+                                  Juin, 2018
+                              </span>
+
+                                <span>
+                                  <i class="fa fa-clock-o icon-left"></i>
+                                  1 year 4 months
+                                </span>
+                            </small>
+                          </p>
+                          <p>Qubately is a mobile consulting services agency i started with a few friends of mine living in Canada, we have lauched our own apps and made a good amount of money in a short period of time from monetization platforms as Admob and Facebook audience network, after 4 months we decided to go further and start offering our services of mobile apps development to other companies and individuals.</p><p>Qubately team is a group of mobile apps developers working remotely and building awesome mobile apps using Javascript technologies like Ionic Angular FuseJS, our backend stack is composed of different frameworks and services as Ruby On Rails, Express, Firebase, Amazon Web services and more.</p>
+                          <strong>My mission inside Qubately consists of doing the following tasks :</strong>
+                            <ul>
+                                <li> Leading development team. </li>
+                                <li> Managing projects and following up with our clients. </li>
+                                <li> Developing mobile solutions with user experience in mind. </li>
+                                <li> Backend development with Ruby on Rails. </li>
+                            </ul>
+                        </div>
+                      </li>                    
+                      <li class="card card-nested clearfix">
+                        <div class="content">
+                          <p class="clear-margin relative">
                             <strong>Full-stack web/mobile developer</strong>,&nbsp;
                               <a href="https://qraft.nl/"  target="_blank">Qraft</a>
                           </p>
@@ -805,6 +834,35 @@ body {
                             </ul>
                         </div>
                       </li>
+                      <li class="card card-nested clearfix">
+                        <div class="content">
+                          <p class="clear-margin relative">
+                            <strong>Full-stack web developer</strong>,&nbsp;
+                              <a href=""  target="_blank">Freelancing Platforms</a>
+                          </p>
+                          <p class="text-muted">
+                            <small>
+                              <span class="space-right">
+                                Aug, 2015 -
+                                  Feb, 2016
+                              </span>
+
+                                <span>
+                                  <i class="fa fa-clock-o icon-left"></i>
+                                  6 months
+                                </span>
+                            </small>
+                          </p>
+                          <p>Mainly developing web applications using Ruby On Rails for clients worldwide, taking advantage of project management, time tracking, teams communication software and tools.</p>
+                          <strong>tasks :</strong>
+                            <ul>
+                                <li> Ruby On Rails full-stack web development. </li>
+                                <li> Features design and Implementation. </li>
+                                <li> Consulting services. </li>
+                                <li> Reporting and following up with clients. </li>
+                            </ul>
+                        </div>
+                      </li>                    
                       <li class="card card-nested clearfix">
                         <div class="content">
                           <p class="clear-margin relative">
@@ -948,18 +1006,20 @@ body {
                               <div class="space-top labels">
                                   <span class="label label-keyword">Ruby</span>
                                   <span class="label label-keyword">Ruby on Rails</span>
+                                  <span class="label label-keyword">ElasticSearch</span>
+                                  <span class="label label-keyword">Third Party Apis</span>
+                                  <span class="label label-keyword">Amazon Web Services</span>
+                                  <span class="label label-keyword">Firebase</span>
                                   <span class="label label-keyword">Elixir/Phoenix</span>
                                   <span class="label label-keyword">Javascript (ES5/ES6)</span>
+                                  <span class="label label-keyword">TypeScript</span>
+                                  <span class="label label-keyword">Angular</span>
                                   <span class="label label-keyword">EmberJS</span>
                                   <span class="label label-keyword">NodeJS</span>
                                   <span class="label label-keyword">Express</span>
                                   <span class="label label-keyword">ReactJS</span>
                                   <span class="label label-keyword">Twitter Bootstrap</span>
                                   <span class="label label-keyword">Semantic UI</span>
-                                  <span class="label label-keyword">PHP</span>
-                                  <span class="label label-keyword">Symfony</span>
-                                  <span class="label label-keyword">jQuery</span>
-                                  <span class="label label-keyword">Ajax</span>
                                   <span class="label label-keyword">HTML</span>
                                   <span class="label label-keyword">CSS</span>
                               </div>
