--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@ body {
               <span class="profile-pic-container">
                 <div class="profile-pic">
                   <img class="media-object img-circle center-block"  data-src="holder.js/100x100"
-                    alt="Abdenasser El Idrissi" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAIA_wDGAAAAAQAAAAAAAA3lAAAAJDg3NTA5NmE3LTExNDYtNGY5ZC04NGNiLWEwNmUyMzQ0Y2I3OQ.jpg" itemprop="image">
+                    alt="Abdenasser El Idrissi" src="https://media.licdn.com/dms/image/C5603AQGW9qKg9nAtSQ/profile-displayphoto-shrink_200_200/0?e=1540425600&v=beta&t=mG_Rya9hy6K3lvnJkym0pJAKrCrcJWNuYQtUR8w8Xhs" itemprop="image">
                 </div>
 
                 <div class="name-and-profession">
