--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@ body {
               <span class="profile-pic-container">
                 <div class="profile-pic">
                   <img class="media-object img-circle center-block"  data-src="holder.js/100x100"
-                    alt="Abdenasser El Idrissi" src="https://media.licdn.com/dms/image/C5603AQGW9qKg9nAtSQ/profile-displayphoto-shrink_200_200/0?e=1540425600&v=beta&t=mG_Rya9hy6K3lvnJkym0pJAKrCrcJWNuYQtUR8w8Xhs" itemprop="image">
+                    alt="Abdenasser El Idrissi" src="https://scontent.fmad3-3.fna.fbcdn.net/v/t1.0-9/37403553_2160226140659757_98047901434904576_n.jpg?_nc_cat=0&oh=aa47202b88e077a5b9c3f11a129ab553&oe=5BECD9E5" itemprop="image">
                 </div>
 
                 <div class="name-and-profession">
